--- a/app/views/jsfiles/playground.html.erb
+++ b/app/views/jsfiles/playground.html.erb
@@ -63,19 +63,8 @@
   
         <!-- Example row of columns -->
         <div class="row-fluid">
-           <object width="880" height="696"><param name="movie" value="http://www.eporner.com/player/146404"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.eporner.com/player/146404" type="application/x-shockwave-flash" allowscriptaccess="always" width="880" height="696"></embed></object> 
-          </div>
-          <div class="span3">
-            <div style="background:#EAEAFF; width:115px; height:135px; display:inline-block; margin:0px; border: 0px solid; border-radius:8px; background-repeat:no-repeat;">
-              <a href="" class="btn btn-block btn-primary" style="border-bottom-right-radius:0px;border-bottom-left-radius:0px;border-top-right-radius:8px;border-top-left-radius:8px;">Drag &amp; Drop</a>
-              <img src="http://icons.iconarchive.com/icons/dapino/medical/128/blood-drop-icon.png" style="height:105px; margin-left:auto; margin-right:auto;display:block;"></img>
-            </div>
-          </div>
-          <div class="span3">
-            <div style="background:#EAEAFF; width:115px; height:135px; display:inline-block; margin:0px; border: 0px solid; border-radius:8px; background-repeat:no-repeat;">
-              <a href="" class="btn btn-block btn-primary" style="border-bottom-right-radius:0px;border-bottom-left-radius:0px;border-top-right-radius:8px;border-top-left-radius:8px;">Form</a>
-              <img src="http://i.imgur.com/hdVna0n.png" style="height:105px; margin-left:auto; margin-right:auto;display:block;"></img>
-            </div>
+          <div class="span8">
+           <iframe src="http://flashservice.xvideos.com/embedframe/68051"frameborder=0 width=510 height=400 scrolling=no></iframe>
           </div>
         </div>
         <hr>
