--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,11 @@
   <body>
     <%= render '/layouts/header' %>
     <div class="container-fluid">
-      <div class="row-fluid">
+      <!-- <div class="row-fluid"> -->
         <%#= render '/layouts/messages' %>
+
         <%= yield %>
-      </div>
+      <!-- </div> -->
     </div> <!-- end of .container -->
     <div id="modalHolder">
     </div>
