--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,3 +1,4 @@
+<div class="row-fluid">
 	<%= render '/layouts/sidebar' %>
 	<div class="span5">
 	<h1>Playlist index</h1><br />
@@ -21,4 +22,4 @@
 			<% end %>
 		</div>
 	</div>
-	</div>
+	</div></div>
