--- a/app/views/static_pages/about.html
+++ b/app/views/static_pages/about.html
@@ -1,4 +1,5 @@
-<div class="span8 offset2">
+<div class="row-fluid">
+	<div class="span8 offset2">
 
 <p>We are a basement studio (coming to a garage near you), who watch alot of porn. We have new favorites
 every day, and we forget old favorites every day.</p><br />
@@ -16,4 +17,4 @@ inspiration.</p><br />
 <p>If you need help or have suggestions/feedback, please contact us at vrepo1900 (at) gmail.com.
 </p><br />
 
-</div>
+</div></div>
