--- a/app/views/static_pages/contact.html
+++ b/app/views/static_pages/contact.html
@@ -1,6 +1,7 @@
-<div class="span8 offset2">
+<div class="row-fluid">
+	<div class="span8 offset2">
 
 <p>If you need help or have suggestions/feedback, please contact us at vrepo1900 (at) gmail.com.
 </p><br />
 
-</div>
+</div></div>
