--- a/app/views/static_pages/info.html.erb
+++ b/app/views/static_pages/info.html.erb
@@ -1,3 +1,4 @@
+<div class="row-fluid">
 	<div class="span4 offset1" id="signup-container">
 		<a id="signing-up"></a><h2>Signing Up</h2>
 		<div class="row-fluid">
@@ -77,4 +78,4 @@
 			 	<p>A modal window will come up and let you set the title and submit the link.</p>
 			</div>
 		</div>
-	</div>
+	</div></div>
