--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
-<div class="span4 offset2">
+<div class="row-fluid">
+  <div class="span4 offset2">
 <h1>Sign Up!</h1>
 <br/>
 <%= form_for @user do |f| %>
@@ -15,4 +16,5 @@
   <%#= @publisher_html.html_safe %><br />
   <button type="submit" class="btn btn-primary btn-large">Create Account</button>
 <% end %>
+</div>
 </div>
