--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -3,156 +3,119 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+$sidebar-border-color:#006ccc;
+$sidebar-border-textcolor:#444;
+
+$top-sidebar-border-textcolor: #555;
+$top-sidebar-border-color:#FFD35E;
+
+$title-height: 21px;
+
+$bookmark-list-border-color: #3A3;
+$active-bookmark: lighten($bookmark-list-border-color,40%);
+$active-bookmark-textcolor: #555;
+
+$detail-bookmark-border-color:#FF5050;
+$detail-bookmark-textcolor:#555;
+$detail-bookmark-border-textcolor:white;
+
+.input-prepend .add-on{
+	background-color: whitesmoke;
+  background-image: -moz-linear-gradient(top, white, #e6e6e6);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, white, #e6e6e6);
+  background-image: -o-linear-gradient(top, white, #e6e6e6);
+  background-image: linear-gradient(to bottom, white, #e6e6e6);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFE6E6E6', GradientType=0);
+  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #e6e6e6;
+  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+}
+
 //playlist classes
-.playlist_links {
-	height:26px;
-}
 
- /* custom player skin */
- .flowplayer { background-color: #222; background-size: cover; max-width: 800px; height:95px; margin:10px 0px 10px 0px; }
- .flowplayer .fp-controls { background-color: rgba(0, 0, 0, 0.4)}
- .flowplayer .fp-timeline { background-color: rgba(0, 0, 0, 0.5)}
- .flowplayer .fp-progress { background-color: rgba(219, 0, 0, 1)}
- .flowplayer .fp-buffer { background-color: rgba(249, 249, 249, 1)}
- //#accordion2 .flowplayer .fp-ui{background-image: url(http://releases.flowplayer.org/5.3.2/skin/img/play_black.png); background-repeat:no-repeat;}
- .flowplayer { background-image: url(/assets/Bookmarklet%20Example.png)
- }
-.flowplayer:not(.is-poster):not(.is-finished){
-   background-image:none;
- }
- .is-playing{ background-image:none;}
-.flowplayer.is-finished .fp-controls,.flowplayer.is-finished .fp-fullscreen,.flowplayer.is-finished .fp-unload,.flowplayer.is-finished .fp-time,.flowplayer.is-finished .fp-embed{display:none !important}.flowplayer.is-finished .fp-engine{ top:-9999em;}
-
-//#inlay{background:#333 url("/media/img/demos/layout/coffee2.jpg") 0 0 no-repeat;}
-//#inlay .fp-ratio{/* initial state */-webkit-transition:padding-top .5s;-moz-transition:padding-top .5s;transition:padding-top .5s;padding-top:45%}
-//#inlay.is-splash{cursor:default}
-//#inlay.is-splash .fp-ui{/* initially the nested UI element works as thumbnail */background:#333 url("/media/img/demos/layout/coffee3.jpg") 0 0 no-repeat;-webkit-background-size:contain;-moz-background-size:contain;background-size:contain;top:auto;bottom:10%;border:3px solid #eee;-webkit-box-shadow:0 0 15px rgba(0,0,0,0.25);-moz-box-shadow:0 0 15px rgba(0,0,0,0.25);box-shadow:0 0 15px rgba(0,0,0,0.25);left:5%;width:25%;height:42%}
-//#inlay.is-ready{/* playback starts */background:#fff;}
-//#inlay.is-ready .fp-ratio{padding-top:75%}
-//#inlay.is-ready .info{display:none}
-
-#bookmark_bar{
-	width:40px;
-	height:1px;
-}
-
-#bookmark_bar+.tooltip{
-	.tooltip-arrow{
-		border-bottom-color:#457AFD;
-	}
-	.tooltip-inner{
-		background-color:#457AFD;
-	}
-}
-
-.info_box {
-	font-size:13px;
-	//font-weight:600;
-	//color:white;
-	margin-bottom:20px;
-	padding-right:8px;
-	padding-left:8px;
-	border-radius:4px;
-	h4 {
-		margin: 4px auto 4px 5px;
-		text-align:center;
-	}
-	p{
-		margin: 0 0 0 5px;
-	}
-	.accordion-group{
-		border:none
-	}
-	.accordion-heading {
-		height:18px;
-		border: 1px #4A76FF solid;
-		border-radius:4px;
-		a {
-			color:#555;
-			text-decoration:none;
-			//border-bottom: 1px #EEE dotted;
-			//display:inline;
-			padding: 0px 0px 0px 0px;
-			margin: 1px 0px 0px 3px;
-		}
-	}
-	.accordion-toggle{
-		line-height:normal;
-		//padding: 0px 15px 0px 15px;
-	}
-	.accordion-inner{
-		border:none;
-		height:150px;
-		//position:relative;
-		//overflow:visible;
-		padding:5px 0px 5px 0px;
-	}
-
-	div.info-hover, img.info-hover{
-		//position:absolute;
-		width:350px;
-		height:175px;
-		//max-width:180px;
-		//max-height:240px;
-		//left:-32px;
-		//top:-15px;
-		z-index:3;
-	  //.flowplayer {
-	  //	width:180px;
-	  //}
-	}
-	//.youtube{
-	//}
-}
-.info-box-blue {
-	color:#555;
-	background: #BBD3FF;
-	height:260px;
-	border:2px dashed #4A76FF;
-}
-
-.info-box-green {
-	color: #019B09;
-	background-color:#ACFFA9;
-	height:200px;
-	width:200px;
-	border:2px dashed #1E9500;
-	border-radius:4px;
-}
-
-.info-box-yellow {
-	background: #FFBA1F;
-	color:#555555;
-	height:100px;
-	margin-top:60px;
-	border:2px dashed #A57417;
-}
-
-.info-box-red {
-	color: #FF0000;
-	background: #FDCBCE;
-	height:160px;
-	border:2px dashed #FF0000;
-}
+.playlist_links {height:26px;}
 
 //sidebar classes
+.well.hasBookmarklet{
+
+	border: $top-sidebar-border-color solid;
+	border-width: 1px 4px 4px 4px;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+
+
+	-moz-box-shadow:inset 2px -2px 6px #CCC;
+	-webkit-box-shadow:inset -2px 2px 6px #CCC;
+	box-shadow:inset 2px -2px 6px #CCC;
+
+	.sidebar-title{
+		background-color:$top-sidebar-border-color;
+		color:$top-sidebar-border-textcolor;
+		margin-bottom:10px;
+	}
+
+  -webkit-font-smoothing: antialiased;
+	#bookmarklet img {
+	  filter: alpha(opacity=100);  
+    -moz-opacity: 0.5;  
+    -khtml-opacity: 0.5;  
+    opacity: 0.5; 
+	}
+}
 .well {
-	background-color:#E6E6E6;
+	-moz-box-shadow:inset 2px -2px 6px #AAA;
+	-webkit-box-shadow:inset -2px 2px 6px #AAA;
+	box-shadow:inset 2px -2px 6px #AAA;
+
+	background-color:#FFF;
+	border: $sidebar-border-color solid;
+	border-width: 1px 4px 4px 4px;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+
+	padding-top:0px;
+	padding-left:0px;
+	padding-right:0px;
+	.nav-list{
+		padding-left:20px;
+		padding-right:20px;
+		li {
+			a{
+				margin-left:0px;
+				margin-right:0px;
+			}
+		}
+	}
+	.sidebar-title {
+		height:$title-height;
+		margin-top: 0px;
+		margin-bottom:10px;
+		margin-left: auto;
+		margin-right: auto;
+		background:$sidebar-border-color;
+		text-align:center;
+		color:white;
+		font-weight:500;
+	}
+	background-color:white;
+  -webkit-font-smoothing: antialiased;
+
 	img {
 		vertical-align:text-top;
 	}
 
 	i,img{
-		filter: alpha(opacity=50);  
-  	-moz-opacity: 0.5;  
-  	-khtml-opacity: 0.5;  
-  	opacity: 0.5; 
-	}
-	#bookmarklet img {
-	 filter: alpha(opacity=100);  
-   -moz-opacity: 1.0;  
-   -khtml-opacity: 1.0;  
-   opacity: 1.0; 
+		-webkit-filter:saturate(80%) hue-rotate(135deg);
+		-moz-filter:saturate(80%) hue-rotate(135deg);
+		-ms-filter:saturate(80%) hue-rotate(135deg);
+		-o-filter:saturate(80%) hue-rotate(135deg);
+		filter:saturate(80%) hue-rotate(135deg);
 	}
 }
 
@@ -160,18 +123,24 @@
 #bookmark_list_view {
 	hr {
 		margin:4px;
-		//margin-bottom:14px;
-		border-top:1px solid #CCCCCC;
+		//border-top:1px solid #CCCCCC;
 	}
 
 	.filter_img {
 		margin-bottom:10px;
 		vertical-align:middle;
-		//background:#777777;
 	}
 
 	.hrspacer {
 		border:none;
+	}
+	.bookmark-list{
+		border: 5px $bookmark-list-border-color solid;
+		-moz-box-shadow: 7px 7px 7px #BBB;
+		-webkit-box-shadow: 7px 7px 7px #BBB;
+		box-shadow: 7px 7px 7px #BBB;
+		border-radius:8px;
+		padding:10px 5px 10px 5px;
 	}
 }
 
@@ -243,8 +212,19 @@
 }
 
 .show_bookmark:hover {
-	background:#D2FFE2;
+	a:not(.btn){
+    color: $active-bookmark-textcolor;
+  }
+	background:$active-bookmark;
 }
+
+.active-bookmark{
+	a:not(.btn){
+    color: $active-bookmark-textcolor;
+  }
+	background-color:$active-bookmark;
+}
+
 //detail classes
 #detail_bookmark_view {
 	margin:10px;
@@ -258,6 +238,8 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  overflow:auto;
+
 }
 
 .detail_bookmark{
@@ -265,13 +247,18 @@
 }
 
 .show_bookmark_detail, .edit_bookmark_fields, .move_bookmark {
+	a:not(.btn){
+	  color: $detail-bookmark-textcolor;
+	}
   min-height: 20px;
   padding: 10px;
   margin-bottom: 20px;
-  //background: #C5FFD4;
-  //border: 6px solid #B8FFC2;
-  background: #D2FFE2;
-  border: 6px solid #C7FFDB;
+	
+	background-color: white;
+	-moz-box-shadow:inset 2px -2px 6px #AAA;
+	-webkit-box-shadow:inset -2px 2px 6px #AAA;
+	box-shadow:inset 2px -2px 6px #AAA;
+	
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -284,9 +271,34 @@
 
 .edit_bookmark_fields, .move_bookmark {
 	display: none;
+	border: $detail-bookmark-border-color solid;
+	border-width: 4px 4px 4px 4px;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
 }
 
 .show_bookmark_detail {
+
+	border: $detail-bookmark-border-color solid;
+	border-width: 1px 4px 4px 4px;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	padding-top:0px;
+	padding-left:0px;
+	padding-right:0px;
+	.sidebar-title {
+		height:$title-height;
+		margin-top: 0px;
+		margin-bottom:10px;
+		margin-left: auto;
+		margin-right: auto;
+		background:$detail-bookmark-border-color;
+		text-align:center;
+		color:$detail-bookmark-border-textcolor;
+		font-weight:500;
+	}
 	pre, p {
 		display:inline-block;
 	}
@@ -295,12 +307,15 @@
 		width:65%;
 		vertical-align:middle;
 		word-wrap:normal;
+		word-break:normal;
 		a {
 			word-wrap:break-word;
+			word-break: break-all;
 		}
 	}
 	p {
 		width:14%;
+		margin:10px;
 	}
 }
 
@@ -329,7 +344,6 @@
 .collapse_link, .remove_link, .watch_link {
 	margin-right:10px;
 	margin-left:10px;
-	//border-radius:10px;
 }
 
 .edit_link {
