--- a/app/views/jsfiles/_bookmarklet_content.html.erb
+++ b/app/views/jsfiles/_bookmarklet_content.html.erb
@@ -5,7 +5,9 @@
 	Hi <%= current_user.username %><br />
 <% end %>
 </div>
-<%= form_for @user_bookmark, :url => 'http://www.vrepo.com/jsfiles/process_bookmarklet', :html => { "data-type" => :json, :method => :post, :remote => true} do |f| %> 
+<!-- 'http://www.vrepo.com/jsfiles/process_bookmarklet' -->
+<!-- 'http://intense-plains-9735.herokuapp.com/jsfiles/process_bookmarklet' -->
+<%= form_for @user_bookmark, :id=>"bookmarklet-link-form", :url => 'http://www.vrepo.com/jsfiles/process_bookmarklet', :html => { "data-type" => :json, :method => :post, :remote => true} do |f| %> 
 <table><th></th><th></th>
 <tr><td>
 	<%= f.label :bookmark_name, 'Title' %></td><td>
