--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,5 +1,7 @@
-<%= render '/layouts/sidebar' %>
+<div class="row-fluid">
+	<%= render '/layouts/sidebar' %>
 <div class="span9">
   <h1>New Playlist</h1>
   <%= render 'playlist_form' %>
+</div>
 </div>
