--- a/app/views/static_pages/privacy.html
+++ b/app/views/static_pages/privacy.html
@@ -1,4 +1,5 @@
-<div class="span10 offset1">
+<div class="row-fluid">
+	<div class="span10 offset1">
 <h1>Privacy Policy</h1>
 <h4 style="font-weight:300"><i>Your privacy is critically important to us. At VRepo we have a few fundamental principles:</i></h4>
 <ul>
@@ -22,4 +23,5 @@
 <p>If VRepo, or substantially all of its assets, were acquired, or in the unlikely event that VRepo goes out of business or enters bankruptcy, user information would be one of the assets that is transferred or acquired by a third party. You acknowledge that such transfers may occur, and that any acquirer of VRepo may continue to use your personal information as set forth in this policy.</p><br />
 <h4>Privacy Policy Changes</h4>
 <p>Although most changes are likely to be minor, VRepo may change its Privacy Policy from time to time, and at VRepo’s sole discretion. VRepo encourages visitors to frequently check this page for any changes to its Privacy Policy. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.</p><br />
+</div>
 </div>
