--- a/app/views/user_bookmarks/edit.html.erb
+++ b/app/views/user_bookmarks/edit.html.erb
@@ -1,4 +1,5 @@
-<h2><%= "Edit Bookmark for "%>
+<div class="row-fluid">
+  <h2><%= "Edit Bookmark for "%>
   <% if(@playlist == current_user.default_list) %>
     <%= link_to current_user.username, current_user%></h2>
   <% else %>
@@ -16,13 +17,14 @@
       </ul>
     </div>
   <% end %>
-	<%= f.label :bookmark_name %><br />
-	<%= f.text_field :bookmark_name %><br /><br />
-	<%= f.fields_for :bookmark_url, @bookmark_url do |f_bu| %>
-		<%= f_bu.label :url %><br />
-		<%= f_bu.text_field :url %>
-	<% end %>
-	<div class="actions">
-		<%= f.submit 'Update Bookmark' %>
-	</div>
+  <%= f.label :bookmark_name %><br />
+  <%= f.text_field :bookmark_name %><br /><br />
+  <%= f.fields_for :bookmark_url, @bookmark_url do |f_bu| %>
+    <%= f_bu.label :url %><br />
+    <%= f_bu.text_field :url %>
+  <% end %>
+  <div class="actions">
+    <%= f.submit 'Update Bookmark' %>
+  </div>
 <% end %>
+</div>
