--- a/app/views/user_bookmarks/new.html.erb
+++ b/app/views/user_bookmarks/new.html.erb
@@ -1,4 +1,5 @@
-<div class="span4 offset2">
+<div class="row-fluid">
+  <div class="span4 offset2">
 <h2><%= "New Bookmark for "%>
   <% if(@playlist == current_user.default_list) %>
     <%= link_to current_user.username, current_user%></h2>
@@ -17,14 +18,15 @@
       </ul>
     </div>
   <% end %>
-	<%= f.label :bookmark_name %><br />
-	<%= f.text_field :bookmark_name %><br /><br />
-	<%= f.fields_for :bookmark_url, @bookmark_url do |f_bu| %>
-		<%= f_bu.label :url %><br />
-		<%= f_bu.text_field :url %>
-	<% end %>
-	<div class="actions">
-		<%= f.submit 'Create New Bookmark' %>
-	</div>
+  <%= f.label :bookmark_name %><br />
+  <%= f.text_field :bookmark_name %><br /><br />
+  <%= f.fields_for :bookmark_url, @bookmark_url do |f_bu| %>
+    <%= f_bu.label :url %><br />
+    <%= f_bu.text_field :url %>
+  <% end %>
+  <div class="actions">
+    <%= f.submit 'Create New Bookmark' %>
+  </div>
 <% end %>
+</div>
 </div>
