--- a/app/views/users/temp.html.erb
+++ b/app/views/users/temp.html.erb
@@ -1,4 +1,5 @@
-<% unless @user.nil? %>
+<div class="row-fluid">
+	<% unless @user.nil? %>
 	<% if @user.errors.any? %>
 	  <div class="error_messages">
 	    <h2>Form is invalid</h2>
@@ -20,3 +21,4 @@
 <h3>Task:</h3>
 <%= link_to 'Click Me', create_temp_users_path, :id => 'create_temp_link' %><!-- 
 <%= link_to 'Click Me', create_temp_users_path, :method => :post, :remote => true, :id => 'create_temp_link' %> -->
+</div>
