--- a/app/views/static_pages/usernotfound.html
+++ b/app/views/static_pages/usernotfound.html
@@ -1,7 +1,4 @@
-<html>
-	<head></head>
-	<body>
-		<h1 style="text-align:center">Sorry, no user with that username was found.</h1>
-		<h1 style="text-align:center">¯\(ツ)/¯</h1>
-	</body>
-</html>
+<div style="text-align:center">
+	<h1>Sorry, no user with that username was found.</h1>
+	<h1>¯\(ツ)/¯</h1>
+	<a href="/welcome">Redirecting you to our welcome page in <span class="countdown">5</span> seconds.</a>
