--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,7 +4,7 @@
             <div class="sidebar-title">Bookmarklet</div>
       <ul class="nav nav-list">
         <% if current_user %>
-            <li><a id="bookmarklet" data-toggle="tooltip" data-trigger="manual"data-title="here" href ="javascript:(function(){jq=document.createElement('SCRIPT');jq.type='text/javascript';jq.src='//www.vrepo.com/jsfiles/jquery_bookmarklet.min.js';document.getElementsByTagName('head')[0].appendChild(jq);})();"><%= image_tag '/assets/glyphicons/glyphicons_072_bookmark.png' %> Drag to your bookmark bar</a><li>
+            <li><a id="bookmarklet" title="vrepo bookmarklet" data-toggle="tooltip" data-trigger="manual"data-title="here" href ="javascript:(function(){jq=document.createElement('SCRIPT');jq.type='text/javascript';jq.src='//www.vrepo.com/jsfiles/jquery_bookmarklet.min.js';document.getElementsByTagName('head')[0].appendChild(jq);})();"><%= image_tag '/assets/glyphicons/glyphicons_072_bookmark.png', alt:"vrepo bookmarklet" %> Drag to your bookmark bar</a><li>
             </ul></div>
             <div class="well sidebar-nav">
                 <div class="sidebar-title">Actions</div>
