--- a/app/views/user_bookmarks/_bookmark_fields.html.erb
+++ b/app/views/user_bookmarks/_bookmark_fields.html.erb
@@ -49,10 +49,12 @@
   			<pre><%= link_to user_bookmark.bookmark_url.url, user_bookmark.bookmark_url.url %></pre>
   		<% end %>
   		<br/>
+  		<% if !current_user.nil? %>
   		<% if current_user.id == @playlist.user.id or current_user.admin %>
 	  	<div class="pull-right">
 				<%= link_to '<i class="icon-trash icon-white"></i> Remove Bookmark'.html_safe, [@playlist, user_bookmark], :method => :delete, :remote => true, :confirm => "Are you sure you want to delete this bookmark?" , class: "remove_link btn btn-mini btn-warning" %>
 			</div>
+			<% end %>
 			<% end %>
   		<br/>	
   	</div>
