--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -74,7 +74,7 @@ body {
 	//custom player skin
 	.flowplayer {
 		background-image: url(/assets/Bookmarklet%20Example.png);
-		max-height:100%;
+		max-height:120px;
 		overflow:hidden;
 
 		-moz-transition:width 0.5s, height 0.5s;
